Add video and fix layout

--- a/oct11.html
+++ b/oct11.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="hijabstyle.css">
     <title>Document</title>
 </head>
-<h1>  Welcome to Modest Fashoin </h1>
+<h1> Modest Fashion </h1>
 <body>
     <nav>
     <a href="#Dresses">Dresses</a>    |
@@ -14,10 +14,10 @@
     <a href="#Bottoms" >Bottoms</a>  |
     <a href="#Tops" >Tops </a>
     </nav>
-    <section id="vidoe ">
-        <iframe src = "https://globalnews.ca/video/rd/7e5e6454-ffe3-11e9-ba11-0242ac110003/?jwsource=cl" height="400" width="1500" ></iframe>
+    <section id="video">
+        <iframe src = "video-hijab.mp4" width="100%" height="400"> </iframe>
     </section>
-    <section id = "Dresses"></section>
+    <section id = "Dresses" />
     <h2> Dresses </h2>
     <ul>
         <li> long dresses</li>
@@ -25,7 +25,7 @@
         <li> party dresses </li>
     </ul>
 
-     <section id="Bottoms "></section>
+     <section id="Bottoms"/>
     <h2> Bottoms </h2>
     <ul> 
         <li> pants </li>
@@ -33,7 +33,7 @@
     </ul>
 
 
-    <section id="Outwear "></section>
+    <section id="Outwear"/>
      <h2> Outwear</h2>
      <ul> 
         <li> coats </li>
@@ -42,7 +42,7 @@
      </ul>
 
 
-     <section id="Tops "></section>
+     <section id="Tops"/>
      <h2> Tops </h2>
      <ul>
         <li> T-shirts </li>
